--- a/views/admin/noticias/index.ejs
+++ b/views/admin/noticias/index.ejs
@@ -1,7 +1,7 @@
 <%- include('../../partials/header'); %>
 <%- include('../../partials/navbar'); %>
 
-<div class="container mg-bottom-100">
+<div class="container mg-bottom-100 mg-top-40">
     <h2 class="mg-top-20">Noticias</h2>
     <a class="btn btn-success mg-bottom-20" href="/admin/noticias/new">Adicionar nova noticia</a>
     <table class="table table-striped table-dark">
