--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -26,6 +26,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/fotos"><i class="fad fa-camera-retro"></i>Fotos Carnaval</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/promocao"><i class="fad fa-camera-retro"></i>Fotos Promoções</a>
+        </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Procurar" aria-label="Search">
