--- a/views/promocao/index.ejs
+++ b/views/promocao/index.ejs
@@ -8,11 +8,24 @@
       </div>
       <div class="card-body bg-dark text-white">
           <form action="/promocao/uploader" method="POST" enctype="multipart/form-data">
-          <input type="file" name="file" >
-          <button class="btn btn-outline-success">Enviar</button>
-          <br>
-          Obs: <span class="text-warning mg-top-20">Todas as imagens devem estar no formato PNG e com nome na seguinte ordem (promocao1, promocao2 etc...)</span>
-          </form>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="inputGroupFileAddon01">Enviar</span>
+              </div>
+              <div class="custom-file">
+                <input type="file" name="file" class="custom-file-input" id="inputGroupFile01"
+                  aria-describedby="inputGroupFileAddon01" multiple>
+                <label class="custom-file-label" for="inputGroupFile01">Escolha o arquivo</label>
+              </div>
+            </div>
+          <div class="d-flex flex-column">
+          <button class="btn btn-outline-success mg-top-20">Enviar</button>
+          <span class="text-warning mg-top-20"><strong>Obs: </strong>Todas as imagens devem estar no formato PNG e com nome na seguinte ordem (promocao1, promocao2 etc...)</span>
+          </div>
+        </form>
+          
+
+          
       </div>     
   </div>
   <div class="card mg-top-40">
@@ -21,6 +34,7 @@
     </div>
     <div class="card-body">
         <div class="container-imgs">
+          <div class="first3">
             <% if (img1 != undefined) { %>
 
                 <div class="img1">
@@ -28,6 +42,11 @@
                       <h4 class="text-center"><%= img1 %></h4>
                   </div>
                     <img src="/img/promocoes/<%= img1 %>" alt="">
+                    <form class="d-flex justify-content-center mg-top-20 mg-bottom-20" action="/delete" method="POST">
+                      <input type="hidden" name="imagemId" value="<%= img1 %>">
+                      <button class="btn btn-danger"><i class="far fa-trash"></i>Deletar</button>
+                    </form>
+
                 </div>
 
             <% } %>
@@ -38,6 +57,10 @@
                     <h4 class="text-center"><%= img2 %></h4>
                   </div>
                   <img src="/img/promocoes/<%= img2 %>" alt="">
+                  <form class="d-flex justify-content-center mg-top-20 mg-bottom-20" action="/delete" method="POST">
+                    <input type="hidden" name="imagemId" value="<%= img2 %>">
+                    <button class="btn btn-danger"><i class="far fa-trash"></i>Deletar</button>
+                  </form>
                 </div>
           <% } %>
 
@@ -47,15 +70,24 @@
                 <h4 class="text-center"><%= img3 %></h4>
               </div>
               <img src="/img/promocoes/<%= img3 %>" alt="">
+              <form class="d-flex justify-content-center mg-top-20 mg-bottom-20" action="/delete" method="POST">
+                <input type="hidden" name="imagemId" value="<%= img3 %>">
+                <button class="btn btn-danger"><i class="far fa-trash"></i>Deletar</button>
+              </form>
             </div>
           <% } %>
-
+        </div>
+        <div class="second3">
           <% if (img4 != undefined) { %>
             <div class="img4">
               <div class="card-header bg-dark text-white">
                 <h4 class="text-center"><%= img4 %></h4>
               </div>
               <img src="/img/promocoes/<%= img4 %>" alt="">
+              <form class="d-flex justify-content-center mg-top-20 mg-bottom-20" action="/delete" method="POST">
+                <input type="hidden" name="imagemId" value="<%= img4 %>">
+                <button class="btn btn-danger"><i class="far fa-trash"></i>Deletar</button>
+              </form>
             </div>
           <% } %>
 
@@ -65,8 +97,26 @@
                 <h4 class="text-center"><%= img5 %></h4>
               </div>
               <img src="/img/promocoes/<%= img5 %>" alt="">
+              <form class="d-flex justify-content-center mg-top-20 mg-bottom-20" action="/delete" method="POST">
+                <input type="hidden" name="imagemId" value="<%= img5 %>">
+                <button class="btn btn-danger"><i class="far fa-trash"></i>Deletar</button>
+              </form>
             </div>
           <% } %>
+
+          <% if (img6 != undefined) { %>
+            <div class="img6">
+              <div class="card-header bg-dark text-white">
+                <h4 class="text-center"><%= img6 %></h4>
+              </div>
+              <img src="/img/promocoes/<%= img6 %>" alt="">
+              <form class="d-flex justify-content-center mg-top-20 mg-bottom-20" action="/delete" method="POST">
+                <input type="hidden" name="imagemId" value="<%= img6 %>">
+                <button class="btn btn-danger"><i class="far fa-trash"></i>Deletar</button>
+              </form>
+            </div>
+          <% } %>
+        </div>
 
         </div>
         
