Adição de classe na tag imagens

--- a/views/promocao/index.ejs
+++ b/views/promocao/index.ejs
@@ -41,7 +41,7 @@
                   <div class="card-header bg-dark text-white">
                       <h4 class="text-center"><%= img1 %></h4>
                   </div>
-                    <img src="/img/promocoes/<%= img1 %>" alt="">
+                    <img class="img_target" src="/img/promocoes/<%= img1 %>" alt="">
                     <form class="d-flex justify-content-center mg-top-20 mg-bottom-20" action="/delete" method="POST">
                       <input type="hidden" name="imagemId" value="<%= img1 %>">
                       <button class="btn btn-danger"><i class="far fa-trash"></i>Deletar</button>
@@ -56,7 +56,7 @@
                   <div class="card-header bg-dark text-white">
                     <h4 class="text-center"><%= img2 %></h4>
                   </div>
-                  <img src="/img/promocoes/<%= img2 %>" alt="">
+                  <img class="img_target" src="/img/promocoes/<%= img2 %>" alt="">
                   <form class="d-flex justify-content-center mg-top-20 mg-bottom-20" action="/delete" method="POST">
                     <input type="hidden" name="imagemId" value="<%= img2 %>">
                     <button class="btn btn-danger"><i class="far fa-trash"></i>Deletar</button>
@@ -69,7 +69,7 @@
               <div class="card-header bg-dark text-white">
                 <h4 class="text-center"><%= img3 %></h4>
               </div>
-              <img src="/img/promocoes/<%= img3 %>" alt="">
+              <img class="img_target" src="/img/promocoes/<%= img3 %>" alt="">
               <form class="d-flex justify-content-center mg-top-20 mg-bottom-20" action="/delete" method="POST">
                 <input type="hidden" name="imagemId" value="<%= img3 %>">
                 <button class="btn btn-danger"><i class="far fa-trash"></i>Deletar</button>
@@ -83,7 +83,7 @@
               <div class="card-header bg-dark text-white">
                 <h4 class="text-center"><%= img4 %></h4>
               </div>
-              <img src="/img/promocoes/<%= img4 %>" alt="">
+              <img class="img_target" src="/img/promocoes/<%= img4 %>" alt="">
               <form class="d-flex justify-content-center mg-top-20 mg-bottom-20" action="/delete" method="POST">
                 <input type="hidden" name="imagemId" value="<%= img4 %>">
                 <button class="btn btn-danger"><i class="far fa-trash"></i>Deletar</button>
@@ -96,7 +96,7 @@
               <div class="card-header bg-dark text-white">
                 <h4 class="text-center"><%= img5 %></h4>
               </div>
-              <img src="/img/promocoes/<%= img5 %>" alt="">
+              <img class="img_target" src="/img/promocoes/<%= img5 %>" alt="">
               <form class="d-flex justify-content-center mg-top-20 mg-bottom-20" action="/delete" method="POST">
                 <input type="hidden" name="imagemId" value="<%= img5 %>">
                 <button class="btn btn-danger"><i class="far fa-trash"></i>Deletar</button>
@@ -109,7 +109,7 @@
               <div class="card-header bg-dark text-white">
                 <h4 class="text-center"><%= img6 %></h4>
               </div>
-              <img src="/img/promocoes/<%= img6 %>" alt="">
+              <img class="img_target" src="/img/promocoes/<%= img6 %>" alt="">
               <form class="d-flex justify-content-center mg-top-20 mg-bottom-20" action="/delete" method="POST">
                 <input type="hidden" name="imagemId" value="<%= img6 %>">
                 <button class="btn btn-danger"><i class="far fa-trash"></i>Deletar</button>
